# WAC

./: README.md  pyproject.toml  requirements.txt  setup.py
results/: 2021_tokyo_io.mono.wac+ner=0.8.csv  2021_tokyo_io.mono.wac.csv  2021_tokyo_io.multi.msc.csv  2021_tokyo_io.multi.wac.csv  dataset.dev.mono.wac+ner.csv  dataset.test.csv  dataset.test.mono.wac+ner.csv  dataset.test.multi.wac.csv  dataset.test.multi.wac.no-merge.csv  dataset.text.mono.wac+ner.csv
scripts/: 00_download_data.sh  01_data_prep.py  02_article_clustering.py  03_event_clustering.py  04_evaluate.py  README.md  run_exp_pipeline.sh
src/models/: README.md  SBERT.py
src/utils/: LinearAlgebra.py  NewsArticle.py  NewsEvent.py  NewsEventBase.py
src/utils/strategy/: ArticleStrategy.py  EventStrategy.py  Monolingual.py  Multilingual.py
src/wac/models/: MNER.py
src/wac/utils/: LinearAlgebra.py  NewsArticle.py  NewsEvent.py  NewsEventBase.py  NewsEventMonitor.py  Wasserstein.py  __init__.py
src/wac/utils/strategy/: ArticleStrategy.py  EventStrategy.py
