[project]
name = "wac"
version = "0.1.1"
description = "The Wasserstein distance-based news Article Clustering algorithm"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Erik Novak", email = "erik.novak@ijs.si" }]
dependencies = [
    "black>=24.10.0",
    "lightning>=2.4.0",
    "numpy>=1.0.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "scipy>=1.14.1",
    "span-marker>=1.5.0",
    "torch>=2.4.0",
    "tqdm>=4.67.0",
    "transformers>=4.46.3",
]

[project.optional-dependencies]
notebook = [
    "datachart>=0.6.3",
    "ipywidgets>=7.5",
    "jupyterlab>=4.3.1",
    "matplotlib>=3.9.2",
    "notebook>=7.0.7",
]
dev = ["flake8>=7.1.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/wac"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
